<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >

        <include layout="@layout/activity_top_bar" />

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/id_settings_change_userImg"
            android:src="@drawable/icon_user_img_default"
            android:layout_width="110dp"
            android:layout_height="110dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:layout_gravity="center_horizontal"
            />

        <TextView
            android:id="@+id/id_settings_change_nickname"
            android:text="@string/text_settings_nickname"
            android:background="@color/white"
            android:drawableRight="@drawable/icon_arrow_right"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:paddingRight="6dp"
            android:paddingLeft="6dp"
            android:gravity="center_vertical"
            android:layout_width="match_parent"
            android:layout_marginBottom="1dp"
            android:layout_height="40dp"/>

        <TextView
            android:id="@+id/id_settings_change_userintro"
            android:text="@string/text_settings_userintro"
            android:background="@color/white"
            android:drawableRight="@drawable/icon_arrow_right"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:paddingRight="6dp"
            android:paddingLeft="6dp"
            android:gravity="center_vertical"
            android:layout_width="match_parent"
            android:layout_marginBottom="1dp"
            android:layout_height="40dp"/>

        <TextView
            android:id="@+id/id_settings_change_password"
            android:text="@string/text_settings_password"
            android:background="@color/white"
            android:drawableRight="@drawable/icon_arrow_right"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:paddingRight="6dp"
            android:paddingLeft="6dp"
            android:gravity="center_vertical"
            android:layout_width="match_parent"
            android:layout_height="40dp"/>

        <RelativeLayout
            android:id="@+id/id_settings_clear_cache"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:layout_width="match_parent"
            android:background="@color/white"
            android:layout_height="40dp">

            <TextView
                android:text="@string/text_settings_clear_cache"
                android:gravity="center_vertical"
                android:layout_width="wrap_content"
                android:paddingLeft="6dp"
                android:layout_height="40dp"/>

            <TextView
                android:id="@+id/id_settings_cache_size"
                android:layout_alignParentRight="true"
                android:paddingRight="6dp"
                android:gravity="center_vertical"
                android:layout_width="wrap_content"
                android:layout_height="40dp"/>

        </RelativeLayout>



        <TextView
            android:id="@+id/id_settings_update"
            android:text="@string/text_settings_update"
            android:background="@color/white"
            android:drawableRight="@drawable/icon_arrow_right"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:paddingRight="6dp"
            android:paddingLeft="6dp"
            android:gravity="center_vertical"
            android:layout_marginBottom="1dp"
            android:layout_width="match_parent"
            android:layout_height="40dp"/>

        <TextView
            android:id="@+id/id_settings_feedback"
            android:text="@string/text_settings_feedback"
            android:background="@color/white"
            android:drawableRight="@drawable/icon_arrow_right"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:paddingRight="6dp"
            android:paddingLeft="6dp"
            android:gravity="center_vertical"
            android:layout_marginBottom="1dp"
            android:layout_width="match_parent"
            android:layout_height="40dp"/>

        <TextView
            android:id="@+id/id_settings_about"
            android:text="@string/text_settings_about"
            android:background="@color/white"
            android:drawableRight="@drawable/icon_arrow_right"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:paddingRight="6dp"
            android:paddingLeft="6dp"
            android:gravity="center_vertical"
            android:layout_marginBottom="1dp"
            android:layout_width="match_parent"
            android:layout_height="40dp"/>

        <Button
            android:id="@+id/id_settings_quit"
            android:textColor="@color/colorWarning"
            android:text="@string/text_settings_quit"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="20dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:background="#FFFFFF"
            android:layout_width="match_parent"
            android:layout_height="40dp"/>

    </LinearLayout>
</ScrollView>