<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"

    >

    <include layout="@layout/activity_top_bar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:layout_marginTop="10dp"
        >


        <android.support.design.widget.TextInputLayout

            android:layout_height="wrap_content"
            android:layout_width="match_parent">

            <EditText
                android:id="@+id/id_sign_in_username_text"
                android:textColorHint="@color/colorHint"
                android:layout_width="match_parent"
                android:hint="@string/prompt_username"
                android:layout_height="wrap_content" />

        </android.support.design.widget.TextInputLayout>

        <TextView
            android:id="@+id/id_sign_in_account_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"/>

        <android.support.design.widget.TextInputLayout
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:layout_height="wrap_content"
            android:layout_width="match_parent">

            <EditText
                android:id="@+id/id_sign_in_password_text"
                android:layout_width="match_parent"
                android:textColorHint="@color/colorHint"
                android:hint="@string/prompt_password"
                android:layout_height="wrap_content" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_height="wrap_content"
            android:layout_width="match_parent">

            <EditText
                android:id="@+id/id_sign_in_confirm_text"
                android:textColorHint="@color/colorHint"
                android:layout_width="match_parent"
                android:hint="@string/prompt_confirm_password"
                android:layout_height="wrap_content" />

        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/id_sign_in_btn"
            style="?android:textAppearanceSmall"
            android:textColor="@color/white"
            android:background="@drawable/shape_course_item_button_join"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/action_sign_in"
            android:textStyle="bold" />


    </LinearLayout>




</LinearLayout>
