<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <include layout="@layout/activity_top_bar"/>

    <ImageView
        android:id="@+id/id_about_logo"
        android:layout_marginTop="50dp"
        android:src="@drawable/icon_logo_opacity"
        android:layout_centerHorizontal="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/id_about_app_name"
        android:layout_below="@+id/id_about_logo"
        android:text="@string/app_name"
        android:textSize="18sp"
        android:layout_centerHorizontal="true"
        android:textColor="@color/black"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/id_about_version"
        android:layout_below="@+id/id_about_app_name"
        android:text="@string/text_settings_version"
        android:textSize="18sp"
        android:layout_marginTop="8dp"
        android:textColor="@color/colorHintInfo"
        android:layout_centerHorizontal="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <ImageView
        android:id="@+id/id_about_qrcode"
        android:layout_below="@+id/id_about_version"
        android:src="@drawable/icon_qrcode"
        android:layout_marginTop="20dp"
        android:layout_centerHorizontal="true"
        android:layout_width="110dp"
        android:layout_height="110dp"/>

    <TextView
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:textColor="@color/colorDefault"
        android:layout_marginBottom="10dp"
        android:textSize="12sp"
        android:text="@string/text_settings_copyright"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

</RelativeLayout>
