<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >

    <include layout="@layout/activity_top_bar" />

    <LinearLayout
        android:padding="20dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >

        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/email_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            app:met_baseColor="@color/colorDefault"
            app:met_primaryColor="@color/colorMain"
            app:met_errorColor="#ddaa00"
            app:met_maxCharacters="10"
            app:met_floatingLabel="highlight"
            android:hint="@string/prompt_username">
            <requestFocus />
        </com.rengwuxian.materialedittext.MaterialEditText>


        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.scottyab.showhidepasswordedittext.ShowHidePasswordEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/password"
                android:hint="@string/prompt_password"
                android:paddingRight="10dp"
                android:textColorHint="@color/colorHint"
                app:tint_color="@color/colorHint"
                app:drawable_show="@drawable/ic_visibility_grey_900_24dp"
                app:drawable_hide="@drawable/ic_visibility_off_grey_900_24dp"
                />

        </android.support.design.widget.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >

            <!--<cn.refactor.library.SmoothCheckBox-->
            <!--android:id="@+id/scb"-->
            <!--android:layout_width="24dp"-->
            <!--android:layout_height="24dp"-->
            <!--android:layout_margin="5dp"-->
            <!--app:color_checked="#447eeb" />-->

            <com.ikok.teachingwebsite.CustomView.MaterialCheckBox
                android:id="@+id/id_checkbox"
                android:layout_marginTop="10dp"
                android:paddingBottom="4dp"
                android:layout_width="24dp"
                android:layout_height="24dp" />

            <TextView
                android:id="@+id/checkbox_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="12dp"
                android:paddingBottom="4dp"
                android:text="@string/save_account"
                android:textSize="14sp"
                android:layout_gravity="center_vertical"
                />

        </LinearLayout>



        <Button
            android:id="@+id/email_sign_in_button"
            style="?android:textAppearanceSmall"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:layout_marginTop="16dp"
            android:text="@string/action_login"
            android:background="@drawable/shape_course_item_button_join"
            android:textStyle="bold" />


    </LinearLayout>



</LinearLayout>
