<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    >

    <LinearLayout
        android:id="@+id/id_myself_layout_learned"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical"
        android:gravity="center"
        >

        <ImageView
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:src="@drawable/icon_learned_course"
            />

        <TextView
            android:text="@string/text_learned_course"
            android:layout_gravity="center"
            android:textSize="16sp"
            android:layout_marginTop="6dp"
            android:textColor="@color/gray"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/id_myself_layout_liked"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical"
        android:gravity="center"
        >

        <ImageView
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:src="@drawable/icon_liked_post"
            />

        <TextView
            android:text="@string/text_liked_post"
            android:layout_gravity="center"
            android:textSize="16sp"
            android:layout_marginTop="6dp"
            android:textColor="@color/gray"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/id_myself_layout_write"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical"
        android:gravity="center"
        >

        <ImageView
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:scaleType="centerCrop"
            android:src="@drawable/icon_writed_post"
            />

        <TextView
            android:text="@string/text_myself_settings"
            android:layout_gravity="center"
            android:textSize="16sp"
            android:layout_marginTop="6dp"
            android:textColor="@color/gray"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </LinearLayout>





</LinearLayout>
